--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
+    "baseline-browser-mapping": "^2.9.14",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.0.0",
     "postcss": "^8.4.0",
