--- a/package.json
+++ b/package.json
@@ -34,15 +34,20 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^5.1.3",
     "autoprefixer": "^10.4.0",
     "baseline-browser-mapping": "^2.9.14",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.0.0",
+    "jsdom": "^28.0.0",
     "postcss": "^8.4.0",
-    "typescript": "^5.2.0"
+    "typescript": "^5.2.0",
+    "vitest": "^4.0.18"
   }
 }
